[package]
name = "aoc_2023"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
aho-corasick = "1.1.2"
bitvec = "1.0.1"
bstr = "1.8.0"
clap = { version = "4.4.10", features = ["derive"] }
color-eyre = "0.6.2"
enum-map = "2.7.3"
humantime = "2.1.0"
itertools = "0.12.0"
regex = "1.10.2"
