[package]
name = "aoc_2023"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
ahash = "0.8.6"
aho-corasick = "1.1.2"
bitvec = "1.0.1"
bstr = "1.8.0"
clap = { version = "4.4.10", features = ["derive"] }
color-eyre = "0.6.2"
enum-map = "2.7.3"
fxhash = "0.2.1"
humantime = "2.1.0"
im = "15.1.0"
indexmap = "2.1.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.10.2"
z3 = "0.12.1"

[profile.release]
debug = true
